# capsolver

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh
examples/: solve_v2.py
src/: __init__.py  find_sitekey.py  recaptcha_v2.py
tests/: test_v2.py
